--- a/src/views/pages/page.mustache
+++ b/src/views/pages/page.mustache
@@ -6,14 +6,21 @@
 {{/banner}}
 
 <div class="container list">
-    <div class="item">
-        <img src="images/pastor-alemao.jpg" class="item--image" />
-        <div class="item--name">Pastor-alemão</div>
-        <div class="item--color">Cor: Amarelo e Preto</div>
-        <div class="item--genre">Gênero: Masculino</div>
-    </div>
-    
+    {{#list}}
+        <div class="item">
+            <img src="images/{{ image }}" class="item--image" />
+            <div class="item--name">{{ name }}</div>
+            <div class="item--color">{{ color }}</div>
+            <div class="item--genre">{{ sex }}</div>
+        </div>
+    {{/list}} 
 </div>
+
+{{^list}}
+<div class="container no-list">
+    <h2>Não há animais disponíveis nestas condições</h2>
+</div>
+{{/list}}
 
 {{>partials/footer}}
 
